# garmin-mcp-gateway

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  nginx.conf.example  pyproject.toml
scripts/: monitor.py  revoke.py  status.py  usage.py
src/garmin_gateway/: app.py  config.py  garmin_login.py  log.py  oauth.py  proxy.py  security.py  store.py  workers.py
src/garmin_gateway/templates/: authorize.html  landing.html  mfa.html
tests/: conftest.py  test_config.py  test_garmin_login.py  test_oauth.py  test_proxy.py  test_security.py  test_store.py  test_workers.py
