[project]
name = "garmin-mcp-gateway"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "starlette>=0.40",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "garminconnect>=0.3.2",
    "cryptography>=42",
    "python-multipart>=0.0.9",
]

[project.scripts]
garmin-gateway = "garmin_gateway.app:main"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/garmin_gateway"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
